Fixing some background problems on mobile device

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,13 @@ img{max-width: 100%;   max-height: 100%;}
         background-image: url("../images/universal/BG_1920.png");
     }
 }*/
+@media screen and(max-width: 1000px){
+    body{
+        background-image: url("../images/universal/BG_Phone.jpeg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+}
 body{
      background-repeat: no-repeat;
      background-attachment: fixed;
